# internal/settings/types.go
@@ -9,6 +9,7 @@ type Settings struct {
 	ChatModelID        string `json:"chat_model_id"`
 	MemoryModelID      string `json:"memory_model_id"`
 	EmbeddingModelID   string `json:"embedding_model_id"`
+	SearchProviderID   string `json:"search_provider_id"`
 	MaxContextLoadTime int    `json:"max_context_load_time"`
 	Language           string `json:"language"`
 	AllowGuest         bool   `json:"allow_guest"`
@@ -18,6 +19,7 @@ type UpsertRequest struct {
 	ChatModelID        string `json:"chat_model_id,omitempty"`
 	MemoryModelID      string `json:"memory_model_id,omitempty"`
 	EmbeddingModelID   string `json:"embedding_model_id,omitempty"`
+	SearchProviderID   string `json:"search_provider_id,omitempty"`
 	MaxContextLoadTime *int   `json:"max_context_load_time,omitempty"`
 	Language           string `json:"language,omitempty"`
 	AllowGuest         *bool  `json:"allow_guest,omitempty"`
